--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version "1.4.32"
+    id 'org.jetbrains.kotlin.jvm' version "1.8.21"
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
@@ -11,13 +11,17 @@ repositories {
     mavenCentral()
 }
 
+kotlin {
+    jvmToolchain(11)
+}
+
 application {
     mainClassName = "fr.minemobs.pepitedorlocalization.MainKt"
 }
 
 dependencies {
     implementation "no.tornado:tornadofx:$tornadofx_version"
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
 }
